--- a/homepage.html
+++ b/homepage.html
@@ -23,7 +23,7 @@
             around the world, representing strength, transformation, and the endless cycle of life, death, and rebirth.
             Join
             us as we delve into the rich history, stories, and symbolism of the Phoenix, uncovering the profound lessons
-            this mythological creature imparts to those who seek inspiration and growth.</p>
+            this mythological creature imparts to those who seek inspiration and growth..</p>
     </div>
     <div style="text-align: center;">
         <BUtton type="button" onclick="location.href='index.html'"> CLICK HERE TO
