--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
   </div>
   <div id="div4">
-    <footer style="background-color:yellowgreen;">
+    <footer style="background-color:rgb(171, 233, 47);">
       <h4>Special Thanks</h4>
 
       <a href="https://www.dallascollege.edu/pages/default.aspx" target="_blank"> Visit Dallas college &nbsp;
