--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id="div1">
-    <h1> THE ETERNAL PHOENIXX </h1>
+    <h1>THE ETERNAL PHOENIX</h1>
     <img src="_images/eternalphoenix.jpg" alt="phoenix" class="center">
     <nav id="endr">
       <a href="login.html"> Log In &nbsp; </a>
