--- a/phoenixpage.html
+++ b/phoenixpage.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8">
     <title>THE PHOENIX PAGE</title>
-    <link rel="stylesheet" type="text/css" href="_css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
     <div id="div1">
         <h1>WHAT YOU SHOULD KNOW ABOUT THE PHOENIX?</h1>
-        <img src="_images/eternalphoenix.jpg" alt="phoenix" class="center">
+        <img src="images/eternalphoenix.jpg" alt="phoenix" class="center">
     </div>
     <section id="div2">
         <h2>About The Phoenix</h2>
