--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title> GALLERY OF THE PHOENIX </title>
 </head>
-<link rel="stylesheet" type="text/css" href="_css/style.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 
 <body style="background-color: aqua;">
 
@@ -30,7 +30,7 @@
                 </article>
             </td>
             <td>
-                <img src="_images/egypt.jpg" width="400" height="400" alt="phoenix">
+                <img src="images/egypt.jpg" width="400" height="400" alt="phoenix">
             </td>
         </tr>
 
@@ -49,7 +49,7 @@
                 </article>
             </td>
             <td>
-                <img src="_images/greek.jpg" width="400" height="400" alt="phoenix">
+                <img src="images/greek.jpg" width="400" height="400" alt="phoenix">
             </td>
         </tr>
         <tr>
@@ -65,7 +65,7 @@
                 </article>
             </td>
             <td>
-                <img src="_images/Persan.jpg" width="400" height="400" alt="phoenix">
+                <img src="images/Persan.jpg" width="400" height="400" alt="phoenix">
             </td>
         </tr>
         <tr>
@@ -78,7 +78,7 @@
                 </article>
             </td>
             <td>
-                <img src="_images/china.jpg" width="400" height="400" alt="phoenix">
+                <img src="images/china.jpg" width="400" height="400" alt="phoenix">
             </td>
         </tr>
     </TABLE>
