--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="div1">
     <h1>THE ETERNAL PHOENIX</h1>
-    <img src="_images/eternalphoenix.jpg" alt="phoenix" class="center">
+    <img src="images/eternalphoenix.jpg" alt="phoenix" class="center">
     <nav id="endr">
       <a href="login.html"> Log In &nbsp; </a>
       <a href="homepage.html" target="_blank"> Home &nbsp; </a>
