--- a/phoenixpage.html
+++ b/phoenixpage.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>THE PHOENIX PAGE</title>
+    <link rel="shortcut icon" href="images/icon/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -23,7 +24,7 @@
         </ol>
     </section>
     <div>
-        <article>
+        <section>
             <header>
                 <H2 id="Etymology">Etymology</H2>
             </header>
@@ -41,8 +42,8 @@
                 Phoenician appears to be from the same root, meaning "those who work with red dyes". So phoenix may mean
                 "the Phoenician bird" or "the purplish-red bird".
             </P>
-        </article>
-        <article>
+        </section>
+        <section>
             <header>
                 <H2 id="Early_texts">Early_texts</H2>
             </header>
@@ -60,8 +61,8 @@
                 but we, the rich-haired Nymphs
                 daughters of Zeus the aegis-holder,
                 outlive ten phoenixes.</P>
-        </article>
-        <article>
+        </section>
+        <section>
             <header>
                 <H2 id="Disputed_origins">Disputed origins</H2>
             </header>
@@ -88,8 +89,8 @@
                 the Egyptian sources regarding the bennu are often problematic and open to a variety of interpretations.
                 Some of these sources may have actually been influenced by Greek notions of the phoenix, rather than the
                 other way around.[10]</P>
-        </article>
-        <article>
+        </section>
+        <section>
             <header>
                 <H2 id="Inpopularculture">In popular culture</H2>
             </header>
@@ -108,8 +109,8 @@
                 The Phoenix is portrayed as a powerful cosmic entity in the Marvel Comics mythology. Through the avatar
                 of Jean Grey and its other beholders, the Phoenix Force is most oftentimes linked to X-Men comics
                 storylines. </p>
-        </article>
-        <article>
+        </section>
+        <section>
             <header>
                 <H2 id="References">References</H2>
             </header>
@@ -126,13 +127,15 @@
                 Volume 1; Volume 6. Indiana University Press. ISBN 978-0253340894
                 Van den Broek, Roelof (1972), The Myth of the Phoenix According to Classical and Early Christian
                 Traditions, translated by Seeger, I., EJ Brill. </p>
-        </article>
+            </section>
     </div>
-    <fOOter id="div4">
+    <div id="div4">
+    <fOOter >
         <H4>SOURCES :</H4>
         <a href="https://en.wikipedia.org/wiki/Phoenix_(mythology)#References" target="_blank"> wikipedia</a>
 
     </fOOter>
+</div>
 </body>
 
 </html>
