--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title> GALLERY OF THE PHOENIX </title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="shortcut icon" href="images/icon/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     
 </head>
 
