--- a/login.html
+++ b/login.html
@@ -6,9 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title> Login Page </title>
+    <link rel="shortcut icon" href="images/icon/favicon.ico">
 </head>
 
-<body >
+<body>
 
     <div>
     
