--- a/gallery.html
+++ b/gallery.html
@@ -68,7 +68,7 @@
                 </article>
             </td>
             <td>
-                <img src="images/Persan.jpg" width="400" height="400" alt="phoenix">
+                <img src="images/persan.jpg" width="400" height="400" alt="phoenix">
             </td>
         </tr>
         <tr>
