--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="login.html"> Log In &nbsp; </a>
       <a href="homepage.html" target="_blank"> Home &nbsp; </a>
       <a href="homepage.html"> About us &nbsp; </a>
-      <a href="mailto:charlesemmanuel86@gmail.com"> Contact us </a>
+      <a href="contact-us.html"> Contact us </a>
     </nav>
 
   </div>
