--- a/contact-us.html
+++ b/contact-us.html
@@ -11,7 +11,7 @@
 
 <body style="background-color: aqua;">
     <div class="centerd">
-        <form action="mailto:charlesemmanuel86@gmail.com" method="post" name="Registration">
+        <form action="success.html" method="post" name="Registration">
 
             <fieldset>
 
