--- a/contact-us.html
+++ b/contact-us.html
@@ -75,7 +75,7 @@
                 <br>
 
                 <input type="reset" value="Start Over">
-                <input type="submit" value="Submit" formaction="success.html">
+                <input type="submit" value="Submit">
 
             </fieldset>
         </form>
