--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <title>Page Web Project</title>
   <link rel="shortcut icon" href="images/icon/favicon.ico">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/layout.css">
 </head>
 
 <body>
-  <div id="div1">
+  <div  class="divprim"  id="div1">
     <h1>THE ETERNAL PHOENIX</h1>
     <img src="images/eternalphoenix.jpg" alt="phoenix" class="center">
     <nav id="endr">
@@ -21,7 +22,7 @@
     </nav>
 
   </div>
-  <div id="div2">
+  <aside id="div2" class="divseg">
     <h2> General Information</h2>
     <ul>
       <li> <a href="index.html">Overview</a></li>
@@ -36,8 +37,8 @@
 
 
 
-  </div>
-  <div id="div3">
+  </aside>
+  <div id="div3" class="div3thi">
      <section>
       <h2> Introduction</h2>
       <figure>
@@ -105,7 +106,7 @@
   </section>
  
   </div>
-  <div id="div4">
+  <div id="div4" class="div4q">
     <footer style="background-color:rgb(171, 233, 47);">
       <h4>Special Thanks</h4>
 
